hotfix: fixed webgl context lost and fixed overflow-x issue on experience page

--- a/src/index.css
+++ b/src/index.css
@@ -106,11 +106,6 @@
   }
 }
 
-html {
-  overflow-x: hidden;
-  width: 100%;
-}
-
 body {
   background: #e5e5e0;
   color: black;
